added loader component

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* @import url(https://fonts.googleapis.com/css?family=Roboto:100,400,300,500); */
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -31,4 +30,26 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+#nprogress .bar {
+    background: #6170F7 !important;
+    height: 3px !important;
+}
+
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 50;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.loader-svg {
+  width: 8rem;
+  height: 8rem;
 }
